manifests/minio.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  namespace: flyte
  labels: 
    app.kubernetes.io/name: minio
spec:
  replicas: 1
  selector:
    matchLabels: 
      app.kubernetes.io/name: minio
  template:
    metadata:
      labels: 
        app.kubernetes.io/name: minio
    spec:
      securityContext:
        fsGroup: 1001 # https://github.com/bitnami/containers/tree/5ea894be67b97fac6adda4a5bcce5703cbd443c7/bitnami/minio#persisting-your-database
      containers:
      - image: "bitnami/minio:2023.7.18-debian-11-r2"
        imagePullPolicy: "IfNotPresent"
        name: minio
        ports:
        - containerPort: 9000
          name: minio
        - containerPort: 9001
          name: minio-console
        resources: 
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 250m
            memory: 256Mi
        volumeMounts:
        - name: minio-storage
          mountPath: /data
      volumes:
      - name: minio-storage
        persistentVolumeClaim:
          claimName: minio-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: flyte
  labels: 
    app.kubernetes.io/name: minio
spec:
  type: NodePort
  ports:
  - name: minio
    nodePort: 30084
    port: 9000
    protocol: TCP
    targetPort: minio
  - name: minio-console
    nodePort: 30088
    port: 9001
    protocol: TCP
    targetPort: minio-console
  selector: 
    app.kubernetes.io/name: minio
