manifests/samba-shares.yaml
# SMB Shares for Servarr Media Stack
# Requires: samba-operator to be installed
---
apiVersion: v1
kind: Service
metadata:
  name: media-library-smb
  namespace: servarr
  labels:
    tailscale.com/proxy-class: control-plane
  annotations:
    tailscale.com/expose: "true"
    tailscale.com/hostname: "media-library-smb"
spec:
  type: LoadBalancer
  selector:
    samba-operator.samba.org/service: media-library
  ports:
    - name: smb
      port: 445
      targetPort: 445
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: tyler-cloud-smb
  namespace: tyler
  labels:
    tailscale.com/proxy-class: control-plane
  annotations:
    tailscale.com/expose: "true"
    tailscale.com/hostname: "tyler-cloud-smb"
spec:
  type: LoadBalancer
  selector:
    samba-operator.samba.org/service: tyler-cloud
  ports:
    - name: smb
      port: 445
      targetPort: 445
      protocol: TCP
