manifests/error-pages.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: error-pages
  namespace: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: error-pages
  template:
    metadata:
      labels:
        app: error-pages
    spec:
      containers:
      - name: error-pages
        image: tarampampam/error-pages:2.20.0
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: error-pages
  namespace: traefik
spec:
  selector:
    app: error-pages
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: error-pages-middleware
  namespace: traefik
spec:
  errors:
    status:
      - "404"
      - "500-599"
    service:
      name: error-pages
      port: 80
    query: /{status}.html
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: error-pages-default
  namespace: traefik
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: HostRegexp(`{host:.+}`)
      priority: 1  # Low priority to act as a catch-all
      services:
        - name: error-pages
          port: 80
